# game-of-greed

./: README.md  pyproject.toml
game_of_greed/: game.py  game_logic.py
game_of_greed_V2/: game.py  game_logic.py  player_bot.py
game_of_greed_V3/: game_logic.py  player_vs_boot.py
tests/: test_banker.py  test_calculate_score.py  test_game_of_greed.py
tests/flow/: bank_first_for_two_rounds.txt  bank_one_roll_then_quit.txt  cheat_and_fix.txt  do_wanna_play_then_quit.txt  flo.py  hot_dice.txt  living_on_the_edge.txt  quitter.txt  zilch.txt
